crates/runtime-search/src/snapshots/runtime_search__types__***s__transpose_and_convert_all_rows_empty.snap
---
source: crates/runtime-search/src/types.rs
expression: sort_result(transpose_and_convert(column_format))
---
[
  [],
  [],
  []
]
