crates/runtime-search/src/snapshots/runtime_search__types__***s__transpose_and_convert_mixed_empty_and_non_empty_rows.snap
---
source: crates/runtime-search/src/types.rs
expression: sort_result(transpose_and_convert(column_format))
---
[
  [
    [
      "key1",
      [
        "A"
      ]
    ]
  ],
  [],
  [
    [
      "key1",
      [
        "B"
      ]
    ]
  ]
]
