crates/runtime-search/src/snapshots/runtime_search__types__***s__transpose_and_convert_multiple_columns.snap
---
source: crates/runtime-search/src/types.rs
expression: sort_result(transpose_and_convert(column_format))
---
[
  [
    [
      "key1",
      [
        "A"
      ]
    ]
  ],
  [
    [
      "key1",
      [
        "B"
      ]
    ],
    [
      "key2",
      [
        "C"
      ]
    ]
  ],
  [
    [
      "key2",
      [
        "D"
      ]
    ]
  ]
]
